--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudappi-project",
+  "name": "proyecto-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,41 +7,62 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
+    "format": "prettier --write \"./**/*.?(vue|ts|js|scss|html)\"",
+    "format:check": "prettier --list-different \"./**/*.?(vue|ts|js|scss|html)\"",
+    "lint:fix": "vue-cli-service lint --fix",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "@types/jest": "^26.0.20",
+    "@vue/cli-plugin-unit-jest": "^4.5.10",
+    "axios": "^0.21.1",
+    "buefy": "^0.9.4",
+    "bulma": "^0.9.1",
+    "core-js": "^3.8.2",
+    "register-service-worker": "^1.7.2",
+    "style-resources-loader": "^1.4.1",
+    "tslint-config-prettier": "^1.18.0",
+    "vee-validate": "^3.4.5",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-i18n": "^8.22.3",
+    "vue-mq": "^1.0.1",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0",
+    "vuex-class": "^0.3.2",
+    "vuex-persistedstate": "^3.2.0",
+    "vuex-smart-module": "^0.5.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "@vue/cli-plugin-babel": "~4.5.10",
+    "@vue/cli-plugin-eslint": "~4.5.10",
+    "@vue/cli-plugin-pwa": "~4.5.10",
+    "@vue/cli-plugin-router": "~4.5.10",
+    "@vue/cli-plugin-typescript": "~4.5.10",
+    "@vue/cli-plugin-vuex": "~4.5.10",
+    "@vue/cli-service": "~4.5.10",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^1.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^1.1.2",
+    "cypress": "6.2.1",
+    "@cypress/webpack-preprocessor": "^5.5.0",
+    "cypress-image-snapshot": "^4.0.0",
+    "@types/cypress-image-snapshot": "3.1.2",
+    "eslint": "^7.17.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.4.1",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
+    "typescript": "~4.1.3",
+    "@types/jest": "^26.0.20",
+    "@vue/cli-plugin-unit-jest": "^4.5.10",
+    "vue-template-compiler": "^2.6.12",
+    "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "eslintConfig": {
     "root": true,
