--- a/public/.github/workflows/cd.dev.yml
+++ b/public/.github/workflows/cd.dev.yml
@@ -21,4 +21,5 @@ jobs:
     - run: npm run format:check
     - run: npm run lint
     - run: npm run test:unit
+    - run: npm run test:e2e
     - run: npm run build
